[master] linter for client side and multiload logic for server
