# internal/api/server/zpotify_api/zpotify_common.pb.go
@@ -216,6 +216,8 @@ type Playlist struct {
 	Name          string                 `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
 	Description   *string                `protobuf:"bytes,3,opt,name=description,proto3,oneof" json:"description,omitempty"`
 	IsPublic      bool                   `protobuf:"varint,4,opt,name=is_public,json=isPublic,proto3" json:"is_public,omitempty"`
+	Artists       []*ArtistBase          `protobuf:"bytes,5,rep,name=artists,proto3" json:"artists,omitempty"`
+	CoverFileId   *int64                 `protobuf:"varint,6,opt,name=cover_file_id,json=coverFileId,proto3,oneof" json:"cover_file_id,omitempty"`
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
 }
@@ -276,6 +278,20 @@ func (x *Playlist) GetIsPublic() bool {
 		return x.IsPublic
 	}
 	return false
+}
+
+func (x *Playlist) GetArtists() []*ArtistBase {
+	if x != nil {
+		return x.Artists
+	}
+	return nil
+}
+
+func (x *Playlist) GetCoverFileId() int64 {
+	if x != nil && x.CoverFileId != nil {
+		return *x.CoverFileId
+	}
+	return 0
 }
 
 type SongFile struct {
@@ -348,13 +364,16 @@ const file_zpotify_common_proto_rawDesc = "" +
 	"\aartists\x18\x03 \x03(\v2\x17.zpotify_api.ArtistBaseR\aartists\x12!\n" +
 	"\fduration_sec\x18\x04 \x01(\x05R\vdurationSec\x12\x1b\n" +
 	"\tfile_path\x18\x05 \x01(\tR\bfilePath\x12\x17\n" +
-	"\afile_id\x18\x06 \x01(\x03R\x06fileId\"\x86\x01\n" +
+	"\afile_id\x18\x06 \x01(\x03R\x06fileId\"\xf4\x01\n" +
 	"\bPlaylist\x12\x12\n" +
 	"\x04uuid\x18\x01 \x01(\tR\x04uuid\x12\x12\n" +
 	"\x04name\x18\x02 \x01(\tR\x04name\x12%\n" +
 	"\vdescription\x18\x03 \x01(\tH\x00R\vdescription\x88\x01\x01\x12\x1b\n" +
-	"\tis_public\x18\x04 \x01(\bR\bisPublicB\x0e\n" +
-	"\f_description\".\n" +
+	"\tis_public\x18\x04 \x01(\bR\bisPublic\x121\n" +
+	"\aartists\x18\x05 \x03(\v2\x17.zpotify_api.ArtistBaseR\aartists\x12'\n" +
+	"\rcover_file_id\x18\x06 \x01(\x03H\x01R\vcoverFileId\x88\x01\x01B\x0e\n" +
+	"\f_descriptionB\x10\n" +
+	"\x0e_cover_file_id\".\n" +
 	"\bSongFile\x12\x0e\n" +
 	"\x02id\x18\x01 \x01(\x03R\x02id\x12\x12\n" +
 	"\x04path\x18\x02 \x01(\tR\x04pathB*\x92\x82\x19\f@zpotify/apiZ\x18/zpotify_api;zpotify_apib\x06proto3"
@@ -381,11 +400,12 @@ var file_zpotify_common_proto_goTypes = []any{
 }
 var file_zpotify_common_proto_depIdxs = []int32{
 	1, // 0: zpotify_api.SongBase.artists:type_name -> zpotify_api.ArtistBase
-	1, // [1:1] is the sub-list for method output_type
-	1, // [1:1] is the sub-list for method input_type
-	1, // [1:1] is the sub-list for extension type_name
-	1, // [1:1] is the sub-list for extension extendee
-	0, // [0:1] is the sub-list for field type_name
+	1, // 1: zpotify_api.Playlist.artists:type_name -> zpotify_api.ArtistBase
+	2, // [2:2] is the sub-list for method output_type
+	2, // [2:2] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
 }
 
 func init() { file_zpotify_common_proto_init() }
