# internal/api/server/zpotify_api/zpotify_service_playlist.pb.gw.go
@@ -209,6 +209,33 @@ func local_request_PlaylistAPI_AddSongToPlaylist_0(ctx context.Context, marshale
 	return msg, metadata, err
 }
 
+func request_PlaylistAPI_UpdatePlaylist_0(ctx context.Context, marshaler runtime.Marshaler, client PlaylistAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq UpdatePlaylist_Request
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	msg, err := client.UpdatePlaylist(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_PlaylistAPI_UpdatePlaylist_0(ctx context.Context, marshaler runtime.Marshaler, server PlaylistAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq UpdatePlaylist_Request
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.UpdatePlaylist(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 // RegisterPlaylistAPIHandlerServer registers the http handlers for service PlaylistAPI to "mux".
 // UnaryRPC     :call PlaylistAPIServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -334,6 +361,26 @@ func RegisterPlaylistAPIHandlerServer(ctx context.Context, mux *runtime.ServeMux
 			return
 		}
 		forward_PlaylistAPI_AddSongToPlaylist_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodPost, pattern_PlaylistAPI_UpdatePlaylist_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/zpotify_api.PlaylistAPI/UpdatePlaylist", runtime.WithHTTPPathPattern("/api/playlist/update"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_PlaylistAPI_UpdatePlaylist_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_PlaylistAPI_UpdatePlaylist_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -477,6 +524,23 @@ func RegisterPlaylistAPIHandlerClient(ctx context.Context, mux *runtime.ServeMux
 		}
 		forward_PlaylistAPI_AddSongToPlaylist_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_PlaylistAPI_UpdatePlaylist_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/zpotify_api.PlaylistAPI/UpdatePlaylist", runtime.WithHTTPPathPattern("/api/playlist/update"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_PlaylistAPI_UpdatePlaylist_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_PlaylistAPI_UpdatePlaylist_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
@@ -487,6 +551,7 @@ var (
 	pattern_PlaylistAPI_ListSongs_0         = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "playlist", "songs"}, ""))
 	pattern_PlaylistAPI_ChangeSongsOrder_0  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "playlist", "songs", "order"}, ""))
 	pattern_PlaylistAPI_AddSongToPlaylist_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "playlist", "add_song"}, ""))
+	pattern_PlaylistAPI_UpdatePlaylist_0    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "playlist", "update"}, ""))
 )
 
 var (
@@ -496,4 +561,5 @@ var (
 	forward_PlaylistAPI_ListSongs_0         = runtime.ForwardResponseMessage
 	forward_PlaylistAPI_ChangeSongsOrder_0  = runtime.ForwardResponseMessage
 	forward_PlaylistAPI_AddSongToPlaylist_0 = runtime.ForwardResponseMessage
+	forward_PlaylistAPI_UpdatePlaylist_0    = runtime.ForwardResponseMessage
 )
